Changed name, removed placeholder logo.

--- a/login.html
+++ b/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>LinkedIn Clone - Log In</title>
+<title>WorkConnect - Log In</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/w3.css">
@@ -86,7 +86,7 @@
     <footer class="w3-container w3-theme-d5 w3-bottom">
         <table class="w3-opacity-min" style="width:100%">
             <td>
-                <h5>LinkedIn Clone</h5>
+                <h5>WorkConnect</h5>
             </td>
             <td style="float:right">
                 <p>Made by Vasileios Papavasileiou & Vasileios Sakkas - Powered by
