--- a/notifications.html
+++ b/notifications.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>LinkedIn Clone - Notifications</title>
+<title>WorkConnect - Notifications</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/w3.css">
@@ -28,8 +28,8 @@
                 <i class="fa fa-bars"></i>
             </a>
             <a href="home.html" class="w3-bar-item w3-button w3-padding-large">
-                <i class="fa fa-linkedin-square w3-margin-right"></i>
-                LinkedIn Clone
+
+                WorkConnect
             </a>
             <a href="login.html" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large">
                 <i class="fa fa-sign-out"></i>
@@ -260,7 +260,7 @@
     <footer class="w3-container w3-theme-d5">
         <table class="w3-opacity-min" style="width:100%">
             <td>
-                <h5>LinkedIn Clone</h5>
+                <h5>WorkConnect</h5>
             </td>
             <td style="float:right">
                 <p>Made by Vasileios Papavasileiou & Vasileios Sakkas - Powered by
