--- a/register.html
+++ b/register.html
@@ -19,7 +19,7 @@
     }
 </style>
 
-<body class="w3-theme-l5">
+<body background="images/welcome.jpg" class="w3-theme-l5">
 
     <!-- Page Container -->
     <div class="w3-container w3-content" style="max-width:1400px;margin-top:160px">
@@ -28,7 +28,7 @@
 
             <!-- Left Column -->
             <div class="w3-col m8">
-                <h1>LOGO</h1>
+                <h1 class="w3-outline">WorkConnect</h1>
             </div>
             <!-- End Left Column -->
 
@@ -84,7 +84,7 @@
                             <tr>
                                 <td>
                                     <div class="w3-row w3-padding" style="width:100%;">
-                                        <img id="profile_img" src='images/placeholder.png' alt='Image not found. Please try again.' width="160" height="160" class='w3-border w3-round-large'>
+                                        <img id="profile_img" src='images/placeholder.png' alt='Image not found. Please try again.' width="160" height="160" class='w3-border'>
                                     </div>
                                 </td>
                                 <td>
