--- a/login_admin.html
+++ b/login_admin.html
@@ -69,7 +69,7 @@
                                 <td style="width: 200%">
                                     <div class="w3-row w3-padding" style="width: 200%">
                                         Not an Administrator?
-                                        <a href="register.html">Go back to the Logιn page.</a>
+                                        <a href="login.html">Go back to the Login page.</a>
                                     </div>
                                 </td>
                             </tr>
