Added profile editing page for the admin.

--- a/profile_admin.html
+++ b/profile_admin.html
@@ -60,6 +60,10 @@
                         </div>
                     </td>
                     <td>
+                        <button type="button" onclick="location.href='profile_admin_edit.html'" class="w3-button w3-theme-d2">
+                            <i class="fa fa-edit"></i> Edit</button>
+                    </td>
+                    <td>
                         <button type="button" class="w3-button w3-theme-d2">
                             <i class="fa fa-download"></i> Download (XML)</button>
                     </td>
@@ -74,7 +78,8 @@
                     <img src="images/avatar3.png" alt="Avatar" style="width:100%" class="w3-round-large w3-margin-bottom">
                     <h4>Jane Doe</h4>
                     <hr class="w3-clear">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore
                         et dolore magna aliqua.
                     </p>
                     <hr class="w3-clear">
@@ -97,19 +102,22 @@
                     <h4>Work Experience</h4>
                     <ul style="padding-left: 16px">
                         <li><b>Company #1</b> <i style="float:right;">Jan 2017 - Now</i>
-                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                            incididunt
                             ut labore et dolore magna aliqua.
                             <br>
                             <br>
                         </li>
                         <li><b>Company #2</b> <i style="float:right">Oct 2015 - Nov 2016</i>
-                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                            incididunt
                             ut labore et dolore magna aliqua.
                             <br>
                             <br>
                         </li>
                         <li><b>Company #3</b> <i style="float:right">Apr 2013 - Sep 2015</i>
-                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                            incididunt
                             ut labore et dolore magna aliqua.
                             <br>
                             <br>
@@ -119,13 +127,15 @@
                     <h4>Education</h4>
                     <ul style="padding-left: 16px">
                         <li><b>University</b> <i style="float:right">Sep 2008 - Jun 2012</i>
-                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                            incididunt
                             ut labore et dolore magna aliqua.
                             <br>
                             <br>
                         </li>
                         <li><b>School</b>
-                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                            incididunt
                             ut labore et dolore magna aliqua.
                             <br>
                             <br>
