Updated edit pages.

--- a/profile_admin_edit.html
+++ b/profile_admin_edit.html
@@ -83,7 +83,12 @@
                         </td>
                     </table>
                     <hr class="w3-clear">
-                    <h4>Jane Doe</h4>
+                    <div class="w3-row w3-padding-8" style="width:100%;">
+                        <input type="text" placeholder="Name" class="w3-border w3-padding" style="width:100%;" />
+                    </div>
+                    <div class="w3-row w3-padding-8" style="width:100%;">
+                        <input type="text" placeholder="Surname" class="w3-border w3-padding" style="width:100%;" />
+                    </div>
                     <hr class="w3-clear">
                     <div class="w3-row w3-padding-8" style="width:100%;">
                         <input type="text" placeholder="Description" class="w3-border w3-padding" style="width:100%;" />
@@ -91,13 +96,7 @@
                     <hr class="w3-clear">
                     <h4>Contact Info</h4>
                     <div class="w3-row w3-padding-8" style="width:100%;">
-                        <input type="text" placeholder="Email" class="w3-border w3-padding" style="width:100%;" />
-                    </div>
-                    <div class="w3-row w3-padding-8" style="width:100%;">
                         <input type="text" placeholder="Phone" class="w3-border w3-padding" style="width:100%;" />
-                    </div>
-                    <div class="w3-row w3-padding-8" style="width:100%;">
-                        <input type="text" placeholder="Website" class="w3-border w3-padding" style="width:100%;" />
                     </div>
                 </div>
 
