Updated upload buttons.

--- a/register.html
+++ b/register.html
@@ -47,44 +47,45 @@
                             </tr>
                             <tr>
                                 <div class="w3-row w3-padding" style="width:100%;">
-                                    <input id="name" type="text" placeholder="Name" onkeyup="check_form(this.id);" class="w3-border w3-padding" style="width:100%;"
-                                        required/>
+                                    <input id="name" type="text" placeholder="Name" onkeyup="check_form(this.id);"
+                                        class="w3-border w3-padding" style="width:100%;" required />
                                 </div>
                             </tr>
                             <tr>
                                 <div class="w3-row w3-padding" style="width:100%;">
-                                    <input id="surname" type="text" placeholder="Surname" onkeyup="check_form(this.id);" class="w3-border w3-padding" style="width:100%;"
-                                        required/>
+                                    <input id="surname" type="text" placeholder="Surname" onkeyup="check_form(this.id);"
+                                        class="w3-border w3-padding" style="width:100%;" required />
                                 </div>
                             </tr>
                             <tr>
                                 <div class="w3-row w3-padding" style="width:100%;">
-                                    <input id="email" type="email" placeholder="Email" onkeyup="check_form(this.id);" class="w3-border w3-padding" style="width:100%;"
-                                        required/>
+                                    <input id="email" type="email" placeholder="Email" onkeyup="check_form(this.id);"
+                                        class="w3-border w3-padding" style="width:100%;" required />
                                 </div>
                             </tr>
                             <tr>
                                 <div class="w3-row w3-padding" style="width:100%;">
-                                    <input id="phone" type="text" placeholder="Phone Number" onkeyup="check_form(this.id);" class="w3-border w3-padding" style="width:100%;"
-                                        required/>
+                                    <input id="phone" type="text" placeholder="Phone Number" onkeyup="check_form(this.id);"
+                                        class="w3-border w3-padding" style="width:100%;" required />
                                 </div>
                             </tr>
                             <tr>
                                 <div class="w3-row w3-padding" style="width:100%;">
-                                    <input id="password" type="password" placeholder="Password" onkeyup="check_form(this.id);comparePasswords();" class="w3-border w3-padding"
-                                        style="width:100%;" required/>
+                                    <input id="password" type="password" placeholder="Password" onkeyup="check_form(this.id);comparePasswords();"
+                                        class="w3-border w3-padding" style="width:100%;" required />
                                 </div>
                             </tr>
                             <tr>
                                 <div class="w3-row w3-padding" style="width:100%;">
-                                    <input id="c_password" type="password" placeholder="Confirm Password" onkeyup="check_form(this.id);comparePasswords();" class="w3-border w3-padding"
-                                        style="width:100%;" required/>
+                                    <input id="c_password" type="password" placeholder="Confirm Password" onkeyup="check_form(this.id);comparePasswords();"
+                                        class="w3-border w3-padding" style="width:100%;" required />
                                 </div>
                             </tr>
                             <tr>
                                 <td>
                                     <div class="w3-row w3-padding" style="width:100%;">
-                                        <img id="profile_img" src='images/placeholder.png' alt='Image not found. Please try again.' width="160" height="160" class='w3-border'>
+                                        <img id="profile_img" src='images/placeholder.png' alt='Image not found. Please try again.'
+                                            width="160" height="160" class='w3-border'>
                                     </div>
                                 </td>
                                 <td>
@@ -96,7 +97,8 @@
                                             <tr>
                                                 <button type="button" onclick="image_upload();" class="w3-button w3-theme-d2">
                                                     <i class="fa fa-upload "></i> Browse</button>
-                                                <input id='upload_button' type='file' onchange="image_preview();" hidden/>
+                                                <input id='upload_button' type='file' onchange="image_preview();"
+                                                    accept="image/jpeg" hidden />
                                             </tr>
                                         </table>
                                     </div>
