--- a/home.html
+++ b/home.html
@@ -90,7 +90,8 @@
                         <div class="w3-card w3-white">
                             <div class="w3-container w3-padding">
                                 <div class="w3-padding-8">
-                                    <input id="post" type="text" placeholder="Status: Feeling great!" class="w3-border w3-padding" style="width:100%;" />
+                                    <input id="post" type="text" placeholder="Status: Feeling great!" class="w3-border w3-padding"
+                                        style="width:100%;" />
                                 </div>
                                 <table>
                                     <td>
@@ -99,8 +100,9 @@
                                     </td>
                                     <td>
                                         <button type="button" onclick="image_upload();" class="w3-button w3-theme-d2">
-                                            <i class="fa fa-photo "></i> Photo</button>
-                                        <input id='upload_button' type='file' onchange="image_pick();" hidden/>
+                                            <i class="fa fa-photo "></i> Media</button>
+                                        <input id='upload_button' type='file' onchange="image_pick();" accept="audio/*|video/*|image/jpeg"
+                                            hidden />
                                     </td>
                                     <td id="img_picked" class="w3-opacity">
                                     </td>
@@ -118,8 +120,10 @@
                     <h4><a href="user_profile.html" class="w3-link">John Doe</a></h4>
                     <br>
                     <hr class="w3-clear">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
                         aliquip ex ea commodo consequat.
                     </p>
                     <img src="images/lights.jpg" style="width:100%" alt="Northern Lights" class="w3-margin-bottom">
@@ -130,18 +134,21 @@
                         <tr>
                             <td>
                                 <a href="user_profile.html">
-                                    <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right w3-margin-bottom" style="width:60px">
+                                    <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right w3-margin-bottom"
+                                        style="width:60px">
                                 </a>
                             </td>
                             <td style="width: 100%">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt
                                     ut labore et dolore magna aliqua.</p>
                             </td>
                         </tr>
                     </table>
                     <table style="width:100%">
                         <td style="width: 100%">
-                            <input type="text" placeholder="Leave a comment" class="w3-border w3-padding w3-margin-bottom" style="width:100%;" />
+                            <input type="text" placeholder="Leave a comment" class="w3-border w3-padding w3-margin-bottom"
+                                style="width:100%;" />
                         </td>
                         <td style="width: 100%">
                             <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
@@ -158,8 +165,10 @@
                     <h4><a href="user_profile.html" class="w3-link">Jane Doe</a></h4>
                     <br>
                     <hr class="w3-clear">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
                         aliquip ex ea commodo consequat.
                     </p>
                     <button type="button" class="w3-button w3-theme-d2">
@@ -171,7 +180,8 @@
                     </table>
                     <table style="width:100%">
                         <td style="width: 100%">
-                            <input type="text" placeholder="Leave a comment" class="w3-border w3-padding w3-margin-bottom" style="width:100%;" />
+                            <input type="text" placeholder="Leave a comment" class="w3-border w3-padding w3-margin-bottom"
+                                style="width:100%;" />
                         </td>
                         <td style="width: 100%">
                             <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
@@ -188,8 +198,10 @@
                     <h4><a href="user_profile.html" class="w3-link">Angie Jane</a></h4>
                     <br>
                     <hr class="w3-clear">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
                         aliquip ex ea commodo consequat.
                     </p>
                     <img src="images/nature.jpg" style="width:100%" class="w3-margin-bottom">
@@ -200,19 +212,23 @@
                         <tr>
                             <td>
                                 <a href="user_profile.html">
-                                    <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right w3-margin-bottom" style="width:60px">
+                                    <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right w3-margin-bottom"
+                                        style="width:60px">
                                 </a>
                             </td>
                             <td style="width: 100%">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                    incididunt
+                                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation
                                     ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                             </td>
                         </tr>
                     </table>
                     <table style="width:100%">
                         <td style="width: 100%">
-                            <input type="text" placeholder="Leave a comment" class="w3-border w3-padding w3-margin-bottom" style="width:100%;" />
+                            <input type="text" placeholder="Leave a comment" class="w3-border w3-padding w3-margin-bottom"
+                                style="width:100%;" />
                         </td>
                         <td style="width: 100%">
                             <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
@@ -260,8 +276,8 @@
         }
 
         function image_pick() {
-            var selected_image = document.getElementById('upload_button').files[0];
-            document.getElementById('img_picked').innerHTML = "Selected image: " + selected_image.name;
+            var selected_file = document.getElementById('upload_button').files[0];
+            document.getElementById('img_picked').innerHTML = "Selected file: " + selected_file.name;
         }
 
         function check_post() {
